# sails-tutorials

./: Cargo.toml  rust-toolchain.toml
tutorial-1/app/: Cargo.toml
tutorial-1/app/src/: lib.rs  service.rs
tutorial-1/wasm/: .binpath  Cargo.toml  build.rs  hello_world.idl
tutorial-1/wasm/src/: lib.rs
tutorial-2/app/: Cargo.toml
tutorial-2/app/src/: lib.rs  service.rs
tutorial-2/wasm/: .binpath  Cargo.toml  build.rs
tutorial-2/wasm/src/: lib.rs
tutorial-3/app/: Cargo.toml
tutorial-3/app/src/: lib.rs  service.rs
tutorial-3/wasm/: .binpath  Cargo.toml  build.rs  ft.idl
tutorial-3/wasm/src/: lib.rs
