[workspace]

members = [
    "tutorial-1/app",
    "tutorial-1/wasm",
    "tutorial-2/app",
    "tutorial-2/wasm",
    "tutorial-3/app",
    "tutorial-3/wasm",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sails-rs = "0.3.0"
gstd = "=1.5.0"
gwasm-builder = { version = "=1.5.0", package = "gear-wasm-builder" }
sails-idl-gen = "0.3.0"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }